cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    copts = ["-std=c++11"],
    deps = [
        # ANN defines lib in `src` dir
        "@ann//:libann",
        # tetgen has targets at the pkg level
        "@tetgen//:libtetgen",
        # tao's iso-surface
        "@isosurface//:libisosurface",
        "@trimesh//:libtrimesh",
        # gflags
        "@com_github_gflags_gflags//:gflags",
    ],
)
